# turso

./: .dockerignore  .envrc  .gitignore  .rp.yml  AGENTS.md  BUG_REPORT_TO_GITHUB_ISSUES.md  CDC_TXN_ID_PLAN.md  CDC_TXN_ID_SPEC.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.antithesis  Dockerfile.sqlancer  EXPERTS.md  GENCOL_TODO.md  GO_NAMED_PARAMS_BUG.md  IDENTIFIER_FOLLOWUP.md  MVCC_BUG_REPORT.md  MVCC_DROP_TABLE_SCHEMA_CORRUPTION.md  Makefile  NOTICE.md  PERF.md  PR_SUMMARY.md  README.md  VOUCHED.td  aqlitedb  aristo.toml  bug-reports-22-from-night-1.md  bug.md  database.db  deletetest.sql  deny.toml  dist-workspace.toml  fdw_plan.md  flake.nix  haha.sh  idk.text  (+9 more)
allocators/: Cargo.toml
allocators/src/: lib.rs  tests.rs
assertion/: Cargo.toml  lib.rs
bindings/dotnet/: .gitignore  Cargo.toml  Directory.Build.props  Directory.Build.targets  Makefile  Readme.md  Turso.slnx
bindings/java/: .gitignore  Cargo.toml  GPG_SETUP.md  HelloWorld.java  Makefile  README.md  TRANSACTION_TODO.md  build.gradle.kts  gradle.properties  setup-gpg-env.sh
bindings/javascript/: .gitignore  Cargo.toml  Makefile  README.md  biome.json  package-lock.json  package.json  replace.sh  turso-sql-runner.mjs  turso-sql-split.mjs  wrapper.js
bindings/python/: .envrc  Cargo.toml  README.md  SQLALCHEMY_DIALECT.md  benchmark_anyio.py  py-bindings-db-aio.mdx  py-bindings-db.mdx  py-bindings-sync-aio.mdx  py-bindings-sync.mdx  py-bindings-tests-aio.mdx  py-bindings-tests.mdx  py-bindings.mdx  pyproject.toml  requirements.txt
bindings/ruby/: .gitignore  .standard.yml  Cargo.toml  Gemfile  README.md  Rakefile  lib.rs  limbo.gemspec  turso.gemspec
bindings/rust/: Cargo.toml  README.md  local.db-info  rust-driver-sync.mdx
bindings/wasm-runtime-wasmtime/: Cargo.toml
common/: Cargo.toml  lib.rs  table_reference.rs  utils.rs  value.rs
common/numeric/: mod.rs
common/schema/: affinity.rs  collate.rs  collation.rs  column.rs  mod.rs
core/: Cargo.toml  alloc.rs  assert.rs  assertion.rs  authorizer.rs  btree.rs  btree_dump.rs  build.rs  busy.rs  connection.rs  continuation.rs  csv_fdw.rs  dbpage.rs  error.rs  fast_lock.rs  foreign.rs  function.rs  incremental_blob.rs  lib.rs  multiprocess_tests.rs  parameters.rs  percentile.rs  pragma.rs  pseudo.rs  regexp.rs  reusable_future_box.rs  savepoint.rs  schema.rs  schema_parser.rs  series.rs  sqlite3_ondisk.rs  stack.rs  state_machine.rs  statement.rs  stats.rs  sync.rs  thread.rs  translate.rs  turso_types_vtab.rs  types.rs  (+5 more)
core/alloc/: allocation_site.rs  api.rs  arc.rs  backend.rs  collections.rs  mod.rs  tests.rs  try_clone.rs
core/benches/: alloc_collections.rs  benchmark.rs  btree_benchmark.rs  column_selectivity_benchmark.rs  correlated_subquery_benchmark.rs  count_benchmark.rs  create_index_benchmark.rs  fts_benchmark.rs  graph_queries_benchmark.rs  hash_spill_benchmark.rs  join_benchmark.rs  json_benchmark.rs  logical_log_serialization.rs  mvcc_benchmark.rs  mvcc_recovery_benchmark.rs  prepare_benchmark.rs  prepare_params_benchmark.rs  record_benchmark.rs  record_recycling.rs  sorter_benchmark.rs  struct_union_benchmark.rs  struct_union_profile.rs  tpc_h_benchmark.rs  triggers.rs  wasm_benchmark.rs  wasm_udf_benchmark.rs  write_perf_benchmark.rs
core/dialect/: mod.rs  sqlite.rs
core/examples/: mvcc_concurrent_repro.rs  partitioning.rs  partitioning_soak.rs
core/ext/: dynamic.rs  extern_types.rs  foreign_types.rs  mod.rs  uuid.rs  vtab_connect.rs  vtab_xconnect.rs
core/functions/: datetime.rs  format.rs  math.rs  mod.rs  printf.rs  string.rs
core/incremental/: aggregate_operator.rs  compiler.rs  cursor.rs  dag.rs  dbsp.rs  expr_compiler.rs  filter_operator.rs  hashable_row.rs  input_operator.rs  join_operator.rs  literal_operator.rs  merge_operator.rs  mod.rs  operator.rs  persistence.rs  project_operator.rs  recursive_operator.rs  vdbe_maintenance.rs  view.rs
core/index/: hidden_btree.rs  mod.rs  toy_text_ivf.rs  toy_vector_sparse_ivf.rs  vector_sparse_ivf.rs
core/index_method/: backing_btree.rs  fts.rs  mod.rs  toy_vector_sparse_ivf.rs
core/io/: clock.rs  common.rs  completions.rs  file_lock.rs  generic.rs  io_uring.rs  linux.rs  memory.rs  memory_yield.rs  mod.rs  unix.rs  vfs.rs  win_iocp.rs  windows.rs  windows_lock.rs
core/json/: cache.rs  error.rs  json_operations.rs  json_path.rs  jsonb.rs  jsonb_de.rs  mod.rs  ops.rs  path.rs  raw_jsonb.rs  vtab.rs
core/mvcc/: clock.rs  cursor.rs  mod.rs  portable_logical.rs  yield_hooks.rs  yield_points.rs
core/numeric/: decimal.rs  mod.rs  nonnan.rs
core/parser/: ast.rs  clause.rs  expression.rs  operators.rs  statement.rs  tokenizer.rs  utils.rs
core/partition/: error.rs  file.rs  manager.rs  mod.rs  path_resolver.rs  test_hooks.rs
core/skiplist/: alloc_helper.rs  base.rs  base_tests.rs  collector.rs  comparator.rs  map.rs  map_tests.rs  mod.rs  set.rs  set_tests.rs
core/storage/: btree.rs  btree_cursor.rs  buffer_pool.rs  checksum.rs  cursor.rs  database.rs  encryption.rs  header_accessor.rs  journal_mode.rs  mod.rs  mp_generative_tests.rs  mp_tests.rs  multi_process_wal.rs  page_bitmap.rs  page_cache.rs  page_error_check.rs  pager.rs  shared_wal_coordination.rs  shm_sentinel.rs  slot_bitmap.rs  sqlite3_ondisk.rs  (+6 more)
macros/: Cargo.toml  lib.rs
parser/: Cargo.toml
sdk-kit/: Cargo.toml  README.md  bindgen.sh  build.rs  turso.h
sdk-kit-macros/: Cargo.toml
simulator/: Cargo.toml  README.md  ROADMAP.md  lib.rs  log  main.rs
sql_gen_prop/: Cargo.toml  alter_table.rs  condition.rs  create_index.rs  create_table.rs  create_trigger.rs  delete.rs  drop_table.rs  drop_trigger.rs  expression.rs  function.rs  generator.rs  insert.rs  lib.rs  profile.rs  schema.rs  select.rs  statement.rs  update.rs  value.rs  view.rs
sqlite3/: Cargo.toml  README.md  cbindgen.toml
std/: Cargo.toml
stress/: Cargo.toml  main.rs  opts.rs  run-miri.sh
tests/: AI.md  Cargo.toml  lib.rs
tests_macros/: Cargo.toml
turso-bench/: Cargo.toml  Makefile  README.md
turso-test-runner/: Cargo.toml  Makefile
wasm-runtime-wasmtime/: Cargo.toml
(+4018 files in other folders)
