[package]
name = "assertion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[features]
running_in_antithesis = ["dep:antithesis_sdk", "antithesis_sdk/full"]

[dependencies]
antithesis_sdk = { workspace = true, optional = true }
