[package]
name = "assertion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["running_in_antithesis"]
running_in_antithesis = ["antithesis_sdk/full"]

[dependencies]
antithesis_sdk = { workspace = true }
