[package]
name = "turso_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Turso parser library"

[lib]
name = "turso_parser"

[features]
default = []
serde = ["dep:serde", "bitflags/serde"]
simulator = []

[dependencies]
bitflags = { workspace = true }
miette = { workspace = true }
strum = { workspace = true }
strum_macros = {workspace = true }
serde = { workspace = true , optional = true, features = ["derive"] }
thiserror = { workspace = true }
turso_macros = { workspace = true }
memchr = "2.7.6"

[dev-dependencies]
fallible-iterator = { workspace = true }
codspeed-criterion-compat = { workspace = true }

[target.'cfg(not(target_family = "windows"))'.dev-dependencies]
pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "parser_benchmark"
harness = false
