# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "turso_sqlite3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[features]
capi = []
lfs = []
sqlite3 = []

[package.metadata.dist]
dist = true

[lib]
doc = false
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
env_logger = { workspace = true, default-features = false }
libc = "0.2.169"
turso_core = { workspace = true, features = ["conn_raw_api"] }
turso_ext.workspace = true
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.capi.header]
name = "sqlite3.h"

[[test]]
name = "compat"
path = "tests/compat/mod.rs"

[build-dependencies]
