# Copyright 2025 the Limbo authors. All rights reserved. MIT license.

[package]
name = "turso_stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo stress tester"
publish = false

[[bin]]
name = "turso_stress"
path = "main.rs"

[features]
default = ["experimental_indexes"]
antithesis = ["turso/antithesis"]
experimental_indexes = []

[dependencies]
anarchist-readable-name-generator-lib = "0.1.0"
antithesis_sdk = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
turso = { workspace = true }
