# Copyright 2025 the Limbo authors. All rights reserved. MIT license.

[package]
name = "turso_stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo stress tester"
publish = false

[[bin]]
name = "turso_stress"
path = "main.rs"

[features]
default = []
antithesis = ["turso/antithesis", "dep:antithesis_sdk", "antithesis_sdk?/full"]

[dependencies]
antithesis_sdk = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
turso = { workspace = true }
rusqlite = { workspace = true }
sqlsmith-rs-executor.workspace = true
sqlsmith-rs-common.workspace = true
