[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration & fuzz tests"

[lib]
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[dependencies]
anyhow.workspace = true
env_logger = { workspace = true }
turso_core = { workspace = true, features = ["conn_raw_api"] }
turso = { workspace = true, features = ["conn_raw_api"] }
tokio = { workspace = true, features = ["full"] }
rusqlite.workspace = true
tempfile = { workspace = true }
log = "0.4.22"
assert_cmd = "^2"
rand_chacha = { workspace = true }
rand = { workspace = true }
zerocopy = "0.8.26"
ctor = "0.5.0"
twox-hash = "2.1.1"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }

[features]
encryption = ["turso_core/encryption"]
checksum = ["turso_core/checksum"]
