[package]
name = "turso-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
turso-core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "turso_bench"
path = "src/lib.rs"

[[bin]]
name = "turso-bench"
path = "src/main.rs"