[package]
name = "turso-test-runner"
version = "0.1.0"
edition = "2024"
description = "SQL test runner for Turso/Limbo with custom DSL"
license = "MIT"
repository = "https://github.com/tursodatabase/turso"

[[bin]]
name = "turso-test-runner"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true, features = ["derive"] }

# Parsing
logos = "0.16"
regex = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Utilities
tempfile = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
similar = { workspace = true }
insta = { version = "1.41", default-features = false, features = ["yaml"] }
num_cpus = "1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Output formatting
owo-colors = "4.2.3"
indicatif = "0.17"

# Error reporting
miette = { workspace = true, features = ["fancy"] }

# File globbing
glob = "0.3"

itertools = { workspace = true }
chumsky = "0.12.0"

# Database generation
fake = { version = "4.4", features = ["derive", "rand_core"] }
rand = { workspace = true }
rand_chacha = { workspace = true }

# Turso Rust bindings
turso = { workspace = true }

# Turso SQL parser (for splitting multi-statement SQL)
turso_parser = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
