[package]
name = "turso_node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Turso database library Node bindings"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
turso_core = { workspace = true, features = ["fts"] }
turso_parser = { workspace = true }
napi = { version = "3.1.3", default-features = false, features = ["napi6"] }
napi-derive = { version = "3.1.1", default-features = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock"] }

[features]
browser = []
tracing_release = ["turso_core/tracing_release"]
[build-dependencies]
napi-build = "2.2.3"
