[package]
name = "py-turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "_turso"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
turso_sdk_kit = { workspace = true }
turso_sync_sdk_kit = { workspace = true }
pyo3 = { version = "0.28.2", features = ["anyhow"] }

[build-dependencies]
version_check = "0.9.5"
# used where logic has to be version/distribution specific, e.g. pypy
pyo3-build-config = { version = "0.28.2" }
