[package]
name = "ruby-limbo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "limbo"
path = "ext/limbo/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
limbo_core = { workspace = true, features = ["io_uring"] }
thiserror = "2.0.9"
tokio = { version = "1.29.1", features = ["full"] }
