# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turso Rust API"

[features]
default = ["mimalloc"]
antithesis = ["turso_sdk_kit/antithesis"]
mimalloc = ["dep:mimalloc"]
sync = []

[dependencies]
turso_sdk_kit = { workspace = true }
turso_sync_sdk_kit = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber.workspace = true
tracing.workspace = true
mimalloc = { workspace = true, optional = true }
hyper = { version = "1.8.1", features = ["http1"] }
tokio = { workspace = true, features = ["fs", "full", "io-util", "tokio-macros"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.19", features = ["http1", "tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
