# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turso Rust API"

[features]
default = ["mimalloc"]
antithesis = ["turso_sdk_kit/antithesis"]
mimalloc = ["dep:mimalloc"]

[dependencies]
turso_sdk_kit = { workspace = true }
turso_sync_sdk_kit = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber.workspace = true
tracing.workspace = true
mimalloc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
