# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turso Rust API"

[lints]
workspace = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
# Base sync deps shared by both TLS backends (not meant to be activated directly)
_sync_base = [
    "dep:hyper",
    "dep:tokio",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:bytes",
]
# Original sync feature uses native-tls (OpenSSL on Linux)
sync = ["_sync_base", "dep:hyper-tls"]
# Pure-Rust TLS via rustls -- no OpenSSL needed
sync-rustls = ["_sync_base", "dep:hyper-rustls"]

[dependencies]
turso_sdk_kit = { workspace = true }
turso_sync_sdk_kit = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber.workspace = true
tracing.workspace = true
mimalloc = { workspace = true, optional = true }

hyper = { version = "1.8.1", features = ["http1"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
hyper-rustls = { version = "0.27", optional = true, default-features = false, features = [
    "http1",
    "tls12",
    "ring",
    "native-tokio",
    "webpki-tokio",
] }
hyper-util = { version = "0.1.19", features = [
    "http1",
    "tokio",
], optional = true }
http-body-util = { version = "0.1.3", optional = true }
bytes = { version = "1.11.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand.workspace = true
rand_chacha = { workspace = true }
anyhow.workspace = true
reqwest = { version = "0.12.28", features = ["json"] }
serde_json.workspace = true

[[example]]
name = "sync_example"
required-features = ["sync"]
