[package]
name = "turso_wasm_runtime_wasmtime_js"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wasmtime WASM runtime NAPI bindings for Turso JavaScript SDK"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
turso_wasm_wasmtime = { workspace = true }
turso_core = { workspace = true }
napi = { version = "3.8.3", default-features = false, features = ["napi6"] }
napi-derive = { version = "3.5.2", default-features = true }

[build-dependencies]
napi-build = "2.3.1"
