[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "dsl_parser"
repository.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
chumsky = "0.10.1"
hex = "0.4.3"
rusqlite = { workspace = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
