[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "dsl_test_runner"
repository.workspace = true
version.workspace = true

[[bin]]
name = "dsl_runner"
path = "main.rs"

[dependencies]
anyhow = "1.0.98"
ariadne = { version = "0.5.1", features = ["concolor", "auto-color"] }
clap = { version = "4.5.38", features = ["derive"] }
dsl_parser = { workspace = true }
limbo_core = { workspace = true }
regex = "1.11.1"
rusqlite = { workspace = true }
tempfile = "3.20.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
