[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "dsl_test_runner"
repository.workspace = true
version.workspace = true

[[bin]]
name = "dsl_runner"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.98"
ariadne = { version = "0.5.1", features = ["concolor", "auto-color"] }
clap = { version = "4.5.38", features = ["derive"] }
dsl_parser = { workspace = true }
gag = "1.0.0"
limbo_core = { workspace = true }
owo-colors = "4.2.0"
rayon = "1.10.0"
regex = "1.11.1"
rusqlite = { workspace = true }
tempfile = "3.20.0"
walkdir = "2.5.0"
